--- a/redfox.yaml
+++ b/redfox.yaml
@@ -22,3 +22,6 @@ proxies:
   - { name: "🦊 RedFox-21", type: socks5, server: "27.147.141.164",  port: 1088, username: "test", password: "test" }
   - { name: "🦊 RedFox-22", type: socks5, server: "27.147.142.73",  port: 10888, username: "test", password: "test123" }
   - { name: "🦊 RedFox-23", type: socks5, server: "27.147.145.122",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-24", type: socks5, server: "27.147.142.202",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-25", type: socks5, server: "27.147.145.14",  port: 10888, username: "test", password: "test123" }
+  - { name: "🦊 RedFox-26", type: socks5, server: "27.147.159.86",  port: 1088, username: "test", password: "test123" }
