--- a/redfox.yaml
+++ b/redfox.yaml
@@ -1,167 +1,2 @@
 proxies:
-  - { name: "🦊 RedFox-1", type: socks5, server: "103.166.253.94", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-2", type: socks5, server: "103.186.238.9", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-3", type: socks5, server: "103.111.225.73", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-4", type: socks5, server: "103.108.60.35", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-5", type: socks5, server: "103.84.252.101", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-6", type: socks5, server: "103.197.48.198", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-7",  type: socks5, server: "119.148.31.202",   port: 9090, username: "test", password: "test" }
-  - { name: "🦊 RedFox-8",  type: socks5, server: "119.148.54.93",   port: 9090, username: "test", password: "test" }
-  - { name: "🦊 RedFox-9",  type: socks5, server: "119.148.51.26",   port: 9090, username: "a", password: "a" }
-  - { name: "🦊 RedFox-10", type: socks5, server: "103.101.197.186",   port: 6969, username: "test", password: "test" }
-  - { name: "🦊 RedFox-11", type: socks5, server: "103.101.199.24",  port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-12", type: socks5, server: "103.106.236.156",  port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-13", type: socks5, server: "103.112.53.106",  port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-14", type: socks5, server: "103.120.201.168",  port: 9090, username: "1", password: "1" }
-  - { name: "🦊 RedFox-15", type: socks5, server: "103.112.54.130",  port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-16", type: socks5, server: "103.120.203.62",  port: 6969, username: "test", password: "test" }
-  - { name: "🦊 RedFox-17", type: socks5, server: "103.122.142.210",  port: 1080, username: "test", password: "test" }
-  - { name: "🦊 RedFox-18", type: socks5, server: "27.147.132.22",  port: 10888, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-19", type: socks5, server: "27.147.141.162",  port: 1088, username: "a", password: "a" }
-  - { name: "🦊 RedFox-20", type: socks5, server: "27.147.141.163",  port: 1088, username: "a", password: "a" }
-  - { name: "🦊 RedFox-21", type: socks5, server: "27.147.141.164",  port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-22", type: socks5, server: "27.147.142.73",  port: 10888, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-23", type: socks5, server: "27.147.145.122",  port: 10888, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-24", type: socks5, server: "27.147.142.202",  port: 10888, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-25", type: socks5, server: "27.147.145.14",  port: 10888, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-26", type: socks5, server: "27.147.159.86",  port: 1088, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-27", type: socks5, server: 103.48.161.145, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-28", type: socks5, server: 103.72.60.143, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-29", type: socks5, server: 103.72.60.182, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-30", type: socks5, server: 103.72.60.220, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-31", type: socks5, server: 103.72.61.33, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-32", type: socks5, server: 103.72.61.42, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-33", type: socks5, server: 103.72.61.44, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-34", type: socks5, server: 103.72.61.57, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-35", type: socks5, server: 103.101.197.128, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-36", type: socks5, server: 103.101.197.251, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-37", type: socks5, server: 103.101.199.255, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-38", type: socks5, server: 103.106.238.22, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-39", type: socks5, server: 103.106.239.1, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-40", type: socks5, server: 103.106.239.40, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-41", type: socks5, server: 103.106.239.169, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-42", type: socks5, server: 103.106.239.173, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-43", type: socks5, server: 103.106.239.218, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-44", type: socks5, server: 103.112.52.139, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-45", type: socks5, server: 103.112.52.180, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-46", type: socks5, server: 103.112.52.181, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-47", type: socks5, server: 103.112.52.214, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-48", type: socks5, server: 103.112.53.118, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-49", type: socks5, server: 103.112.53.160, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-50", type: socks5, server: 103.120.203.67, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-51", type: socks5, server: 103.122.142.17, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-52", type: socks5, server: 103.122.142.122, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-53", type: socks5, server: 103.122.142.130, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-54", type: socks5, server: 103.122.142.131, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-55", type: socks5, server: 103.147.162.69, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-56", type: socks5, server: 103.147.162.99, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-57", type: socks5, server: 103.147.162.143, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-58", type: socks5, server: 103.147.162.151, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-59", type: socks5, server: 103.147.162.153, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-60", type: socks5, server: 103.147.162.179, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-61", type: socks5, server: 103.147.162.182, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-62", type: socks5, server: 103.147.162.183, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-63", type: socks5, server: 103.147.163.0, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-64", type: socks5, server: 103.147.163.98, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-65", type: socks5, server: 103.159.128.14, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-66", type: socks5, server: 103.159.128.220, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-67", type: socks5, server: 103.159.129.21, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-68", type: socks5, server: 103.159.129.77, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-69", type: socks5, server: 103.205.37.86, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-70", type: socks5, server: 103.218.27.226, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-71", type: socks5, server: 103.231.238.214, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-72", type: socks5, server: 103.239.252.82, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-73", type: socks5, server: 103.239.252.120, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-74", type: socks5, server: 103.239.253.51, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-75", type: socks5, server: 103.239.254.252, port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-76", type: socks5, server: 103.239.255.43, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-77", type: socks5, server: 114.129.15.131, port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-78", type: socks5, server: "45.125.220.114", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-79", type: socks5, server: "45.125.220.223", port: 1052, username: "test", password: "test" }
-  - { name: "🦊 RedFox-80", type: socks5, server: "45.125.223.105", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-81", type: socks5, server: "45.249.102.102", port: 1080, username: "test", password: "test" }
-  - { name: "🦊 RedFox-82", type: socks5, server: "103.48.161.132", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-83", type: socks5, server: "103.106.236.156", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-84", type: socks5, server: "103.112.53.37", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-85", type: socks5, server: "103.112.53.106", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-86", type: socks5, server: "103.112.54.130", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-87", type: socks5, server: "103.122.142.210", port: 1080, username: "test", password: "test" }
-  - { name: "🦊 RedFox-88", type: socks5, server: "103.218.24.234", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-89", type: socks5, server: "160.22.21.161", port: 1080, username: "test", password: "test" }
-  - { name: "🦊 RedFox-90", type: socks5, server: "45.125.220.223", port: 1052, username: "ras", password: "ras" }
-  - { name: "🦊 RedFox-91", type: socks5, server: "103.218.27.66", port: 1052, username: "ras", password: "ras" }
-  - { name: "🦊 RedFox-92", type: socks5, server: "103.218.27.67", port: 1052, username: "ras", password: "ras" }
-  - { name: "🦊 RedFox-93", type: socks5, server: "45.249.102.93", port: 1088, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-94", type: socks5, server: "103.101.197.73", port: 10888, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-95", type: socks5, server: "103.106.236.226", port: 10888, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-96", type: socks5, server: "103.112.52.187", port: 10888, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-97", type: socks5, server: "103.112.54.13", port: 10888, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-98", type: socks5, server: "103.120.202.73", port: 1088, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-99", type: socks5, server: "103.120.203.188", port: 1088, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-100", type: socks5, server: "103.120.203.190", port: 1088, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-101", type: socks5, server: "103.147.162.104", port: 10888, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-102", type: socks5, server: "103.218.24.237", port: 10888, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-103", type: socks5, server: "103.231.239.126", port: 10888, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-104", type: socks5, server: "160.22.21.220", port: 10888, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-105", type: socks5, server: "103.48.161.145", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-106", type: socks5, server: "103.72.60.143", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-107", type: socks5, server: "103.72.60.182", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-108", type: socks5, server: "103.72.60.220", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-109", type: socks5, server: "103.72.61.42", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-110", type: socks5, server: "103.72.61.44", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-111", type: socks5, server: "103.72.61.57", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-112", type: socks5, server: "103.101.197.128", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-113", type: socks5, server: "103.101.199.255", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-114", type: socks5, server: "103.106.238.22", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-115", type: socks5, server: "103.106.239.1", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-116", type: socks5, server: "103.106.239.40", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-117", type: socks5, server: "103.106.239.169", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-118", type: socks5, server: "103.106.239.173", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-119", type: socks5, server: "103.106.239.218", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-120", type: socks5, server: "103.112.52.139", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-121", type: socks5, server: "103.112.52.180", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-122", type: socks5, server: "103.112.52.181", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-123", type: socks5, server: "103.112.52.214", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-124", type: socks5, server: "103.112.53.118", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-125", type: socks5, server: "103.112.53.160", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-126", type: socks5, server: "103.120.203.67", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-127", type: socks5, server: "103.122.142.17", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-128", type: socks5, server: "103.122.142.122", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-129", type: socks5, server: "103.122.142.130", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-130", type: socks5, server: "103.122.142.131", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-131", type: socks5, server: "103.147.162.69", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-132", type: socks5, server: "103.147.162.99", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-133", type: socks5, server: "103.147.162.151", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-134", type: socks5, server: "103.147.162.153", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-135", type: socks5, server: "103.147.162.164", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-136", type: socks5, server: "103.147.162.179", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-137", type: socks5, server: "103.147.162.182", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-138", type: socks5, server: "103.147.162.183", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-139", type: socks5, server: "103.147.163.0", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-140", type: socks5, server: "103.147.163.98", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-141", type: socks5, server: "103.159.128.220", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-142", type: socks5, server: "103.159.129.21", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-143", type: socks5, server: "103.159.129.77", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-144", type: socks5, server: "103.205.37.86", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-145", type: socks5, server: "103.218.27.226", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-146", type: socks5, server: "103.231.238.214", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-147", type: socks5, server: "103.239.252.82", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-148", type: socks5, server: "103.239.252.120", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-149", type: socks5, server: "103.239.253.51", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-150", type: socks5, server: "103.239.254.252", port: 10888, username: "123", password: "321" }
-  - { name: "🦊 RedFox-151", type: socks5, server: "114.129.15.131", port: 19568, username: "123", password: "321" }
-  - { name: "🦊 RedFox-152", type: socks5, server: "118.179.158.241", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-153", type: socks5, server: "118.179.202.238", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-154", type: socks5, server: "118.179.214.106", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-155", type: socks5, server: "118.179.214.107", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-156", type: socks5, server: "202.4.105.122", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-157", type: socks5, server: "202.4.124.42", port: 1088, username: "test", password: "test" }
-  - { name: "🦊 RedFox-158", type: socks5, server: "118.179.101.102", port: 1088, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-159", type: socks5, server: "118.179.135.120", port: 1088, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-160", type: socks5, server: "118.179.200.244", port: 10888, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-161", type: socks5, server: "202.4.101.64", port: 1088, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-162", type: socks5, server: "202.4.105.96", port: 1088, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-163", type: socks5, server: "202.4.105.244", port: 1088, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-164", type: socks5, server: "202.4.117.208", port: 10888, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-165", type: socks5, server: "202.4.122.209", port: 10888, username: "test", password: "test123" }
-  - { name: "🦊 RedFox-166", type: socks5, server: "118.179.157.219", port: 1052, username: "ras", password: "ras" }
+  - { name: "🦊 Update required", type: socks5, server: "1.1.1.1", port: 1088, username: "test", password: "test" }
