--- a/cmiuc.yaml
+++ b/cmiuc.yaml
@@ -299,3 +299,700 @@ proxies:
   username: "test"
   password: "test"
   name: 🦊 RedFox-50
+  - type: "socks5"
+  server: "103.166.253.90"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-51
+- type: "socks5"
+  server: "103.245.204.139"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-52
+- type: "socks5"
+  server: "103.111.225.85"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-53
+- type: "socks5"
+  server: "103.111.225.87"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-54
+- type: "socks5"
+  server: "103.111.225.90"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-55
+- type: "socks5"
+  server: "103.111.225.91"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-56
+- type: "socks5"
+  server: "103.111.225.93"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-57
+- type: "socks5"
+  server: "103.111.225.94"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-58
+- type: "socks5"
+  server: "103.111.225.96"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-59
+- type: "socks5"
+  server: "103.111.225.97"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-60
+- type: "socks5"
+  server: "103.111.225.99"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-61
+- type: "socks5"
+  server: "103.111.225.100"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-62
+- type: "socks5"
+  server: "103.111.225.101"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-63
+- type: "socks5"
+  server: "103.111.225.102"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-64
+- type: "socks5"
+  server: "103.111.225.103"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-65
+- type: "socks5"
+  server: "103.111.225.104"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-66
+- type: "socks5"
+  server: "103.111.225.105"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-67
+- type: "socks5"
+  server: "103.111.225.106"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-68
+- type: "socks5"
+  server: "103.111.225.107"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-69
+- type: "socks5"
+  server: "103.111.225.108"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-70
+- type: "socks5"
+  server: "103.111.225.109"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-71
+- type: "socks5"
+  server: "103.111.225.110"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-72
+- type: "socks5"
+  server: "103.111.225.111"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-73
+- type: "socks5"
+  server: "103.111.225.112"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-74
+- type: "socks5"
+  server: "103.111.225.113"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-75
+- type: "socks5"
+  server: "103.111.225.114"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-76
+- type: "socks5"
+  server: "103.111.225.115"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-77
+- type: "socks5"
+  server: "103.111.225.116"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-78
+- type: "socks5"
+  server: "103.111.225.117"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-79
+- type: "socks5"
+  server: "103.111.225.118"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-80
+- type: "socks5"
+  server: "103.111.225.119"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-81
+- type: "socks5"
+  server: "103.111.225.120"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-82
+- type: "socks5"
+  server: "103.111.225.121"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-83
+- type: "socks5"
+  server: "103.111.225.122"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-84
+- type: "socks5"
+  server: "103.111.225.123"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-85
+- type: "socks5"
+  server: "103.111.225.124"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-86
+- type: "socks5"
+  server: "103.111.225.125"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-87
+- type: "socks5"
+  server: "103.111.225.126"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-88
+- type: "socks5"
+  server: "103.111.225.127"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-89
+- type: "socks5"
+  server: "103.111.225.128"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-90
+- type: "socks5"
+  server: "103.111.225.129"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-91
+- type: "socks5"
+  server: "103.111.225.130"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-92
+- type: "socks5"
+  server: "103.111.225.131"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-93
+- type: "socks5"
+  server: "103.111.225.132"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-94
+- type: "socks5"
+  server: "103.111.225.133"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-95
+- type: "socks5"
+  server: "103.111.225.134"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-96
+- type: "socks5"
+  server: "103.111.225.135"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-97
+- type: "socks5"
+  server: "103.111.225.136"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-98
+- type: "socks5"
+  server: "103.111.225.137"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-99
+- type: "socks5"
+  server: "103.111.225.138"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-100
+- type: "socks5"
+  server: "103.111.225.139"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-101
+- type: "socks5"
+  server: "103.111.225.140"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-102
+- type: "socks5"
+  server: "103.111.225.141"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-103
+- type: "socks5"
+  server: "103.111.225.142"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-104
+- type: "socks5"
+  server: "103.111.225.143"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-105
+- type: "socks5"
+  server: "103.111.225.144"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-106
+- type: "socks5"
+  server: "103.111.225.145"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-107
+- type: "socks5"
+  server: "103.111.225.146"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-108
+- type: "socks5"
+  server: "103.111.225.147"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-109
+- type: "socks5"
+  server: "103.111.225.148"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-110
+- type: "socks5"
+  server: "103.111.225.149"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-111
+- type: "socks5"
+  server: "103.111.225.150"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-112
+- type: "socks5"
+  server: "103.111.225.151"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-113
+- type: "socks5"
+  server: "103.111.225.152"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-114
+- type: "socks5"
+  server: "103.111.225.153"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-115
+- type: "socks5"
+  server: "103.111.225.154"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-116
+- type: "socks5"
+  server: "103.111.225.155"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-117
+- type: "socks5"
+  server: "103.111.225.156"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-118
+- type: "socks5"
+  server: "103.111.225.157"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-119
+- type: "socks5"
+  server: "103.111.225.158"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-120
+- type: "socks5"
+  server: "103.111.225.159"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-121
+- type: "socks5"
+  server: "103.111.225.160"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-122
+- type: "socks5"
+  server: "103.111.225.161"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-123
+- type: "socks5"
+  server: "103.111.225.162"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-124
+- type: "socks5"
+  server: "103.111.225.163"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-125
+- type: "socks5"
+  server: "103.111.225.164"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-126
+- type: "socks5"
+  server: "103.111.225.165"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-127
+- type: "socks5"
+  server: "103.111.225.166"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-128
+- type: "socks5"
+  server: "103.111.225.167"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-129
+- type: "socks5"
+  server: "103.111.225.168"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-130
+- type: "socks5"
+  server: "103.111.225.169"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-131
+- type: "socks5"
+  server: "103.111.225.170"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-132
+- type: "socks5"
+  server: "103.111.225.171"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-133
+- type: "socks5"
+  server: "103.111.225.172"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-134
+- type: "socks5"
+  server: "103.111.225.173"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-135
+- type: "socks5"
+  server: "103.111.225.174"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-136
+- type: "socks5"
+  server: "103.111.225.175"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-137
+- type: "socks5"
+  server: "103.111.225.176"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-138
+- type: "socks5"
+  server: "103.111.225.177"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-139
+- type: "socks5"
+  server: "103.111.225.178"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-140
+- type: "socks5"
+  server: "103.111.225.179"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-141
+- type: "socks5"
+  server: "103.111.225.180"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-142
+- type: "socks5"
+  server: "103.111.225.181"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-143
+- type: "socks5"
+  server: "103.111.225.182"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-144
+- type: "socks5"
+  server: "103.111.225.183"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-145
+- type: "socks5"
+  server: "103.111.225.184"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-146
+- type: "socks5"
+  server: "103.111.225.185"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-147
+- type: "socks5"
+  server: "103.111.225.186"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-148
+- type: "socks5"
+  server: "103.111.225.187"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-149
+- type: "socks5"
+  server: "103.111.225.188"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-150
+- type: "socks5"
+  server: "103.111.225.189"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-151
+- type: "socks5"
+  server: "103.111.225.190"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-152
+- type: "socks5"
+  server: "103.111.225.191"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-153
+- type: "socks5"
+  server: "103.111.225.192"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-154
+- type: "socks5"
+  server: "103.111.225.193"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-155
+- type: "socks5"
+  server: "103.111.225.194"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-156
+- type: "socks5"
+  server: "103.111.225.195"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-157
+- type: "socks5"
+  server: "103.111.225.196"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-158
+- type: "socks5"
+  server: "103.111.225.197"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-159
+- type: "socks5"
+  server: "103.111.225.198"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-160
+- type: "socks5"
+  server: "103.111.225.199"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-161
+- type: "socks5"
+  server: "103.111.225.200"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-162
+- type: "socks5"
+  server: "103.111.225.201"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-163
+- type: "socks5"
+  server: "103.111.225.202"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-164
+- type: "socks5"
+  server: "103.111.225.203"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-165
+- type: "socks5"
+  server: "103.111.225.204"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-166
+
