--- a/cmiuc.yaml
+++ b/cmiuc.yaml
@@ -299,3 +299,280 @@ proxies:
   username: "test"
   password: "test"
   name: 🦊 RedFox-50
+- type: "socks5"
+  server: "103.81.104.177"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-51
+- type: "socks5"
+  server: "103.91.231.244"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-52
+- type: "socks5"
+  server: "103.186.238.1"
+  port: "9169"
+  username: "true"
+  password: "true"
+  name: 🦊 RedFox-53
+- type: "http"
+  server: "182.160.124.174"
+  port: "9669"
+  name: 🦊 RedFox-54
+- type: "http"
+  server: "27.147.163.188"
+  port: "40544"
+  name: 🦊 RedFox-55
+- type: "http"
+  server: "103.40.226.126"
+  port: "26100"
+  name: 🦊 RedFox-56
+- type: "http"
+  server: "202.40.178.218"
+  port: "17209"
+  name: 🦊 RedFox-57
+- type: "http"
+  server: "121.200.63.205"
+  port: "8742"
+  name: 🦊 RedFox-58
+- type: "http"
+  server: "121.200.61.221"
+  port: "6565"
+  name: 🦊 RedFox-59
+- type: "http"
+  server: "45.115.112.138"
+  port: "7675"
+  name: 🦊 RedFox-60
+- type: "socks5"
+  server: "122.102.35.105"
+  port: "1080"
+  username: "user1"
+  password: "user1"
+  name: 🦊 RedFox-61
+- type: "socks5"
+  server: "103.179.154.27"
+  port: "1080"
+  username: "ECats@dx"
+  password: "ECats@dx"
+  name: 🦊 RedFox-62
+- type: "socks5"
+  server: "115.127.192.158"
+  port: "9966"
+  username: "Admintest"
+  password: "Admintest"
+  name: 🦊 RedFox-63
+- type: "socks5"
+  server: "103.126.23.240"
+  port: "1080"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-64
+- type: "socks5"
+  server: "118.179.197.30"
+  port: "9090"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-65
+- type: "socks5"
+  server: "118.179.201.124"
+  port: "6699"
+  name: 🦊 RedFox-66
+- type: "socks5"
+  server: "118.179.205.26"
+  port: "6699"
+  name: 🦊 RedFox-67
+- type: "socks5"
+  server: "202.4.114.56"
+  port: "6699"
+  name: 🦊 RedFox-68
+- type: "socks5"
+  server: "115.127.107.106"
+  port: "6699"
+  username: "ECats"
+  password: "ECats"
+  name: 🦊 RedFox-69
+- type: "socks5"
+  server: "49.0.46.98"
+  port: "1080"
+  username: "Admintest"
+  password: "Admintest"
+  name: 🦊 RedFox-70
+- type: "socks5"
+  server: "202.4.125.208"
+  port: "6699"
+  name: 🦊 RedFox-71
+- type: "socks5"
+  server: "180.211.169.46"
+  port: "1080"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-72
+- type: "socks5"
+  server: "115.127.39.18"
+  port: "6699"
+  username: "ECats"
+  password: "ECats"
+  name: 🦊 RedFox-73
+- type: "http"
+  server: "118.179.152.102"
+  port: "9999"
+  name: 🦊 RedFox-74
+- type: "socks5"
+  server: "115.127.106.158"
+  port: "6699"
+  username: "ECats"
+  password: "ECats"
+  name: 🦊 RedFox-75
+- type: "socks5"
+  server: "115.127.147.40"
+  port: "6699"
+  username: "ECats"
+  password: "ECats"
+  name: 🦊 RedFox-76
+- type: "socks5"
+  server: "118.179.81.98"
+  port: "6699"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-77
+- type: "socks5"
+  server: "118.179.101.117"
+  port: "6699"
+  username: "test9"
+  password: "test9"
+  name: 🦊 RedFox-78
+- type: "socks5"
+  server: "103.4.64.163"
+  port: "6969"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-79
+- type: "socks5"
+  server: "123.253.37.149"
+  port: "6699"
+  username: "ECats"
+  password: "ECats"
+  name: 🦊 RedFox-80
+- type: "socks5"
+  server: "49.0.39.182"
+  port: "1080"
+  username: "Admintest"
+  password: "Admintest"
+  name: 🦊 RedFox-81
+- type: "socks5"
+  server: "45.125.220.114"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-82
+- type: "socks5"
+  server: "45.125.220.223"
+  port: "1052"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-83
+- type: "socks5"
+  server: "45.125.223.105"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-84
+- type: "socks5"
+  server: "45.249.102.102"
+  port: "1080"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-85
+- type: "socks5"
+  server: "103.48.161.132"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-86
+- type: "socks5"
+  server: "103.106.236.156"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-87
+- type: "socks5"
+  server: "103.112.53.37"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-88
+- type: "socks5"
+  server: "103.112.53.106"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-89
+- type: "socks5"
+  server: "103.112.54.130"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-90
+- type: "socks5"
+  server: "103.122.142.210"
+  port: "1080"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-91
+- type: "socks5"
+  server: "103.218.24.234"
+  port: "1088"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-92
+- type: "socks5"
+  server: "160.22.21.161"
+  port: "1080"
+  username: "test"
+  password: "test"
+  name: 🦊 RedFox-93
+- type: "socks5"
+  server: "103.218.27.66"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox-94
+- type: "socks5"
+  server: "103.218.27.67"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox-95
+- type: "socks5"
+  server: "45.249.102.93"
+  port: "1088"
+  username: "test"
+  password: "test123"
+  name: 🦊 RedFox-96
+- type: "socks5"
+  server: "103.101.197.73"
+  port: "10888"
+  username: "test"
+  password: "test123"
+  name: 🦊 RedFox-97
+- type: "socks5"
+  server: "103.106.236.226"
+  port: "10888"
+  username: "test"
+  password: "test123"
+  name: 🦊 RedFox-98
+- type: "socks5"
+  server: "103.112.52.187"
+  port: "10888"
+  username: "test"
+  password: "test123"
+  name: 🦊 RedFox-99
+- type: "socks5"
+  server: "103.112.54.13"
+  port: "10888"
+  username: "test"
+  password: "test123"
+  name: 🦊 RedFox-100
+
